# gwp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  build.rs  scrape_nen.py
.github/workflows/: ci.yml  publish.yml  pypi.yml
go/: README.md  catalog.go  connection.go  convert.go  database.go  errors.go  go.mod  gwp.go  integration_test.go  session.go  status.go  status_test.go  transaction.go  types.go  types_test.go
java/: README.md  pom.xml
java/src/main/java/dev/grafeo/gwp/: CatalogClient.java  DatabaseClient.java  GqlConnection.java  GqlSession.java  GqlStatus.java  ResultCursor.java  Transaction.java
java/src/main/java/dev/grafeodb/gwp/: GqlConnection.java  GqlStatus.java  ResultCursor.java
java/src/main/java/io/grafeodb/gwp/: GqlConnection.java  GqlSession.java  Transaction.java
java/src/test/java/dev/grafeo/gwp/: GqlConnectionTest.java  (+1 more)
js/: README.md  package.json  tsconfig.json
js/scripts/: generate-proto.sh
js/src/: catalog.ts  connection.ts  convert.ts  database.ts  errors.ts  index.ts  result.ts  session.ts  status.ts  transaction.ts  types.ts  util.ts
js/tests/: connection.test.ts  execute.test.ts  helpers.ts  status.test.ts  transaction.test.ts  types.test.ts
proto/: gql_service.proto  gql_types.proto
python/: README.md  pyproject.toml
python/scripts/: generate_proto.py
python/src/gwp_py/: __init__.py  _convert.py  catalog.py  connection.py  database.py  errors.py  result.py  session.py  status.py  transaction.py  types.py
python/src/gwp_py/_generated/: gql_service_pb2.py  gql_service_pb2.pyi  gql_service_pb2_grpc.py  gql_types_pb2.py  gql_types_pb2.pyi  gql_types_pb2_grpc.py
python/tests/: conftest.py  test_connection.py  test_execute.py  test_session.py  test_status.py  test_transaction.py  test_types.py
src/: error.rs  lib.rs  proto.rs  status.rs
src/client/: admin.rs  catalog.rs  connection.rs  database.rs  mod.rs  result.rs  search.rs  session.rs  transaction.rs
src/server/: admin_service.rs  auth.rs  backend.rs  builder.rs  catalog_service.rs  database_service.rs  gql_service.rs  mock_backend.rs  mod.rs  search_service.rs  session_manager.rs  session_service.rs  transaction_manager.rs
src/types/: edge.rs  mod.rs  node.rs  path.rs  record.rs  temporal.rs  value.rs
tests/: catalog_service.rs  client_integration.rs  database_service.rs  integration.rs  stress.rs
(+39 files in other folders)
