[package]
name = "gwp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "A standalone, pure Rust gRPC wire protocol for GQL (ISO/IEC 39075)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GrafeoDB/gql-wire-protocol"
readme = "README.md"
keywords = ["gql", "graph", "grpc", "wire-protocol", "database"]
categories = ["database", "network-programming"]

[dependencies]
prost = "0.13"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tonic = "0.12"

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile.release]
lto = true
